Fixed z-index index and styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,7 @@ nav div ul li a {
     .responsiveMenu {
         display: block;
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         background-color: #F25D07;
         width: 100vw;
         height: 100vh;
